# Thee-Oracle

./: .clinerules-ralph  .env.example  .gitignore  .roomodes  .vercelignore  ABILITIES.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  GEMINI.md  RALPH.md  README.md  SECURITY.md  VERCEL_DEPLOYMENT.md  app.py  demo.py  demo_output.md  main.py  orchestrator.py  package.json  pyproject.toml  requirements.txt  security_best_practices_report.md  vercel.json  vercel_requirements.txt
api/: app.py  hello.py  index.py  test.py  vercel_app.py
config/: mcp_servers.example.yaml  model_chain.example.yaml
data/: sample_knowledge.txt
docs/: IMPLEMENTATION_PHASE_1.md  IMPLEMENTATION_SUMMARY_PHASE_0.md  IMPLEMENTATION_SUMMARY_PHASE_1.md  ORACLE_50_ARCHITECTURE_SPEC.md  ORACLE_50_COMPARISON.md  ORACLE_50_IMPLEMENTATION_GUIDE.md  ORACLE_50_MASTER_ROADMAP.md  ORACLE_50_SYSTEMATIC_IMPLEMENTATION.md  ORACLE_50_TASK_TRACKER.md  ORACLE_CONFIG_SPECIFICATION.md  ORACLE_PERSONAL_ASSISTANT_ROADMAP.md  ORACLE_PLATFORM_COMPREHENSIVE_GUIDE.md  README.md  README_ORACLE_50.md  TECHNICAL_IMPLEMENTATION_GUIDE.md  api_reference.md  enterprise_features.md  plugin_development.md
email_worker/: main.py
gui/: README.md  SETTINGS_HELP_REPORT.md  TESTING_REPORT.md  __init__.py  app.py  launch.py  requirements.txt  test_gui.py  test_settings_help.py  validation.py
infrastructure/: credit_map.json  deploy.tf  docker-compose.yml  oracle_grafana_dashboard.py  oracle_metrics.py  oracle_storage.py
personal_agent/: main.py
scripts/: api_usage_monitor.sh  setup.sh  (+10 more)
(+230 files in other folders)
